# python-calendar

./: .gitignore  Makefile  README.md  calendar-simple.css  calendar.2023.html  calendar.2023.sample.html  calendar.css  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app-custom.yml
devel/: .envrc  .tool-versions  DEVEL.md
src/python_calendar/: calendar.py  cli.py  locale_win.py  util.py
src/python_calendar/holidays/: __init__.py  holiday_base.py  holidays.py  jpholiday.py  syukujitsu.py
src/python_calendar/styles/: calendar.css
src/python_calendar/test/: test_app.py  verify.py
src/python_calendar/test/holidays/: holiday_base.py  holidays.py  jpholiday.py
