[tool.poetry]
name = "python-calendar"
version = "0.1.0"
description = "Python Calendar"
authors = ["Daisuke Arai <daisuke.qu@gmail.com>"]
readme = "README.md"
packages = [{include = "python_calendar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
holidays = "^0.18"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
jpholiday = "^0.1.8"
prettytable = "^3.6.0"
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
