[tool.poetry]
name = "python-calendar"
version = "0.1.0"
description = "Python Calendar"
authors = ["Daisuke Arai <daisuke.qu@gmail.com>"]
readme = "README.md"
packages = [{include = "python_calendar", from = "src"}]

[tool.flake8]
extend-ignore = "E203,F401,C901"
max-line-length = 200
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.scripts]
pycal = 'python_calendar.cli:main'

[tool.poetry.dependencies]
python = "^3.8.1"
holidays = "^0.18"
click = "^8.1.3"
python-dateutil = "^2.7.0"

[tool.poetry.group.dev.dependencies]
jpholiday = "^0.1.8"
prettytable = "^3.6.0"
livereload = "^2.6.3"
pytest = "^7.2.1"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^0.991"
types-setuptools = "^65.7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
